fix gemini highlight styles on mobile

--- a/src/components/IntroHighlights/styles.css
+++ b/src/components/IntroHighlights/styles.css
@@ -161,3 +161,21 @@
     aspect-ratio: initial;
   }
 }
+
+@media screen and (max-width: 800px) {
+  .gemini-highlight::after {
+    content: "";
+    position: absolute;
+    background-image: linear-gradient(rgb(0, 0, 0) 25%, rgba(0, 0, 0, 0) 100%);
+    z-index: 1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: var(--radius);
+  }
+
+  .gemini-highlight p {
+    z-index: 2;
+  }
+}
